kubernetes/Int/deployments/default/zwave-js-ui/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave-js-ui
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zwave-js-ui
  template:
    metadata:
      labels:
        app: zwave-js-ui
    spec:
      containers:
        - name: zwave-js-ui
          image: zwavejs/zwave-js-ui:9.21.0
          volumeMounts:
            - name: pvc
              mountPath: /usr/src/app/store
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: zwave-js-ui
