kubernetes/Int/deployments/default/zwave-js-ui/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: zwave-js-ui
spec:
    selector:
        app: zwave-js-ui
    ports:
        - name: webui
          port: 8091
        - name: websockets
          port: 3000
